# penngrader2

./: .env.example  .gitignore  DESIGN.md  PLAN.md  README.md  docker-compose.example.yml  pyproject.toml
app/api/: auth.py  main.py  routes_instructor.py  routes_student.py  routes_ta.py  schemas.py
app/core/: config.py  grader_validation.py
app/db/: connection.py  queries.py
app/db/migrations/: 001_initial.sql
app/grader_runtime/: harness.py
app/worker/: main.py  runner.py
client/penngrader2/: __init__.py  client.py
config/: allowed_imports.toml
docker/: Dockerfile.api  Dockerfile.grader-runtime
penngrader2/: __init__.py  client.py
scripts/: migrate.py
tests/: test_client.py  test_grader_validation.py
